# projeto1-emerson

./: README.md  compile.sh  run.sh
ElfReader/: CMakeLists.txt  ReadElf.cpp  ReadElf.h  main.cpp
Simulador/: CMakeLists.txt  CPU.cpp  CPU.h  Executor.cpp  Executor.h  Instruction.cpp  Instruction.h  Memory.cpp  Memory.h  instruction_codes.h  main.cpp
test/: compilar.sh
test/ACStone/: 063.div.objdump  aux.c
